<resources>
    <string name="app_name">coinz</string>
    <string name="action_settings">Settings</string>
    <string name="access_token_public">pk.eyJ1IjoidmFjYmxhZGUiLCJhIjoiY2pubjY1aDJ3MDBtZDNwdGc2a3ZsMW1teiJ9.ebgwV-441maQLqB7bNm98A</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
...
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_slidebar">slidebarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_myfriend">companions</string>
    <string name="title_activity_friendinfo">friendinfo</string>
    <string name="title_activity_coin">Coin</string>
    <string name="title_activity_mywallet2">sub inventory</string>
    <string name="title_activity_signup2">Sign up</string>
    <string name="title_activity_walletselect">My Inventory</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_mapbox2">map</string>
    <string name="contract">"let it here by be known, it is the yarl's will that the following facts should be known, and rules be complied when come to the issues around bounty on the dragons:\n
        1. the dragons that roam around the country side , when approached and killed by the advantures, drop dragon bones.It is a valuable resource as it can be made into one of the finest armors and weapons(that is, if you are level 100 at blacksmith, though) Different type of dragons drop different type of scales.
        2. the dragon bones that is collected from the dragons can be exchange to gold , subject to exchange rate given by the steward, which would update everyday as the steward sees fit.. larger piece of scale would have better price porpotional to the size.the advantagers can exchange at most 25 pieces of scales for gold at each day.
        3. the dragon bones that hasn't been exchanged for gold yet get stored in the your inventory, which you can use to send to a friend as a gift.Anyone coin that received as a gift can be exchanged for gold, even if the daily exchange limit has been reached.
        4. you can only send bones to those advantures you know. you can add companions by their username. you can send at most 30 coins a day.
        5. under the yarl 's generous offer, advantures can use their gold to purchase any properties and shops available in the city, provided that they have enough gold. After a property is purchased, it would produce a gold coin at the property's location. The properties produce gold every day.
...

        " </string>
    <string name="prompt_friend_username">input your companion username </string>
    <string name="delete_friend">delete friend</string>
    <string name="refuse">refuse</string>
    <string name="accept">accept</string>
    <string name="title">Skyrim Local Edition</string>
    <string name="subtitle">Welcome to Whiterun!</string>
    <string name="truetitle">also known as coinZ</string>
    <string name="testing">testing</string>
    <string name="save_it">save it</string>
    <string name="penytext">fire dragon bone:  %1$s kg</string>
    <string name="dolrtext">ancient dragon bone:  %1$s kg</string>
    <string name="quidtext">blood dragon bone:  %1$s kg</string>
    <string name="shiltext">frost dragon bone:  %1$s kg</string>
...
