...
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truetitle" />

    <TextView
        android:id="@+id/welcomeinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ScrollView
...
    </ScrollView>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register" />


</LinearLayout>
</android.support.constraint.ConstraintLayout>

